k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-deployment
  namespace: fast-api
  labels:
    app: fast-api-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fast-api-application
  template:
    metadata:
      labels:
        app: fast-api-application
    spec:
      containers:
        - name: fast-api-application
          image: ghcr.io/prospjx/devops-project/imain-app:does-not-exist
          ports:
            - containerPort: 8000
